# Music_Web_AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.kilo/: agent-manager.json
docs/: AI-Search-Service-Complete-Docs.docx
docs/tasks/: task-2-1-embedding-model.md  task-2-2-embedding-cache.md  task-3-1-faiss-integration.md  task-3-2-vector-persistence.md
scripts/: rotate_faiss_backups.sh
src/: __init__.py  main.py
src/api/v1/: embeddings.py  vector_store.py
src/core/: __init__.py  config.py  exceptions.py  logging.py  middleware.py  redis.py  schemas.py
src/embeddings/: __init__.py  cache.py  metrics.py  model.py  types.py
src/vector_store/: __init__.py  faiss_store.py  persistence.py  types.py
tests/: conftest.py  test_embeddings.py  test_embeddings_cache.py  test_middleware.py  test_startup.py  test_vector_store.py  test_vector_store_persistence.py
