[tool.poetry]
name = "ai-search-service"
version = "0.1.0"
description = "Semantic search microservice for music platform"
authors = ["Copilot <copilot@example.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = { extras = ["standard"], version = "0.24.0" }
pydantic = { version = "2.5.0", extras = ["email"] }
pydantic-settings = "2.1.0"
python-multipart = "0.0.6"

[tool.poetry.group.dev.dependencies]
httpx = "0.25.2"
pytest = "7.4.4"
pytest-cov = "4.1.0"
ruff = "0.1.14"
bandit = "1.7.8"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"